# Fangraphs_API_Extractor

./: .coverage  .gitignore  CLAUDE.md  README.md  extracted_players.json  mypy.ini  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: pytest.yml
debug/: run_player_extractor.py
fangraphs_api_extractor/managers/: __init__.py  players_manager.py
fangraphs_api_extractor/models/: __init__.py  base_player.py  hitter.py  pitcher.py
fangraphs_api_extractor/requests/: core_fangraphs.py
fangraphs_api_extractor/runners/: players.py
fangraphs_api_extractor/utils/: __init__.py  constants.py  errors.py  logger.py  string_utils.py  utils.py
tests/: README.md  conftest.py
tests/fixtures/: hitter_projections.json  hitter_steamer.json  pitcher_steamer.json
tests/managers/: test_players_manager.py
tests/models/: test_hitter.py  test_non_ascii.py  test_null_team.py  test_pitcher.py
